# ur_simulator

./: .gitignore  .gitmodules  MUJOCO_LOG.TXT  README.md  ai_setup_guideline.md  crisp_plan.md  install_deps.sh  launch_all.sh  mujoco_plan.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: config.template.yaml
docs/: IMPROVEMENT_PLAN.md  ITERATION_LOG.md  SHORTCOMINGS.md
scripts/: setup_rt.sh  smoke_test.sh
src/ur_sim_config/: CMakeLists.txt  package.xml
src/ur_sim_config/config/: ur_effort_controllers.yaml
src/ur_sim_config/config/ur_types/: _defaults.yaml  ur10.yaml  ur12e.yaml  ur15.yaml  ur16e.yaml  ur20.yaml  ur30.yaml  ur3e.yaml  ur5e.yaml  ur7e.yaml  ur8long.yaml
src/ur_sim_config/launch/: ur_sim_effort.launch.py  ur_sim_mujoco.launch.py
src/ur_sim_config/mujoco/: .gitkeep
src/ur_sim_config/scripts/: generate_mujoco_model.sh  gravity_compensation.py  mjcf_postprocess.py  sim_broadcasters.py  ur_type_loader.py
src/ur_sim_config/urdf/: generate_effort_urdf.sh  ur_self_collide.urdf.xacro  ur_sim.urdf.xacro
src/ur_web_dashboard/: generate_urdf.sh  index.html  server.py
src/ur_web_dashboard/worlds/: no_ground_collision.sdf
