<?xml version="1.0"?>
<package format="3">
  <name>ur_sim_config</name>
  <version>0.1.0</version>
  <description>UR simulator configuration overrides (self-collision, etc.)</description>
  <maintainer email="yizhongzhang1989@gmail.com">yizhongzhang</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ur_description</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
